# AG-SpTRSV

./: CMakeLists.txt  README.md
data/matrix_info/: info.csv
data/trained_model/: model_cpu_3080Ti.out  model_cpu_a100.out
include/: AG-SpTRSV.h  GPU_setup.h  YYSpTRSV.h  common.h  elimination.h  finalize.h  format_def.h  preprocessing.h  schedule.h  search.h  specialization.h  spts_syncfree_cuda.h  subwarp.h  transformation.h
matrix/: Makefile  matrix_info.cpp  transfer_to_tri.cpp
matrix/matrix_sample_csr/: delaunay_n13.csr
model/: mlp.py  mlp_model_def.py  model_predict.py  model_pythonc_test.py
scripts/: build_all.sh  clean_all.sh  run_ag.sh  run_ag_search.sh  run_cusp.sh  run_recblock.sh  run_recblock_list.sh
src/: GPU_setup.cpp  SpTRSV_executor.cu  SpTRSV_executor_code.cu  SpTRSV_executor_subwarp_code.cu  SpTRSV_executor_variant.cu  common.cu  elimination.cpp  finalize.cu  format_def.cpp  partition_level.cu  partition_row.cu  preprocessing.cu  preprocessing_new.cu  schedule.cu  scheduling_new.cu  search.cu  specialization.cpp  transformation.cu
src/core/: SpTRSV_code.cu  SpTRSV_code_inner_level.h  SpTRSV_code_subwarp.cu  SpTRSV_impl.h  (+3 more)
test/: Makefile  main_ag.cu  main_search.cu
test_cusp/: Makefile  main_cusp.cu
test_model/: AG_run.cu  Makefile  main.cpp
test_recblock/: Makefile  common.h  findlevel.h  main.cu  recblocking_calculate.h  recblocking_preprocess.h  recblocking_solver.h  recblocking_solver_cuda.h  tranpose.h  utils.h  utils_csr.h  utils_cuda.h  utils_reordering.h  utils_spmv_cuda.h  utils_sptrsv_cuda.h
utils/: utils.cpp  utils.h
